Corrected queries.css for word wrap and auto hyphens for the divs in group_offre

--- a/css/queries.css
+++ b/css/queries.css
@@ -15,7 +15,14 @@
 		padding-left: 1.5%;
 		box-sizing: border-box;
 	}
-
+	
+	.group_offre div{
+		word-wrap:break-word;
+		-webkit-hyphens: auto;
+		-moz-hyphens: auto;
+		-ms-hyphens: auto;
+		hyphens: auto;
+	}
 	.progress-bar ul{
 		margin-left: -5px;
 	}
